risk-engine/tests/snapshots/golden__g_brute_force_login.snap
---
source: tests/golden.rs
expression: "run(\"brute_force_login\", ctx).await"
---
scenario: brute_force_login
decision: Hold
score: 89
base_score: 89
adjusted_score: 89
required_action: AdminApproval
hold_reason: Some("Score threshold exceeded. Top signals: headless_ua, datacenter_ip, new_ip_address. Action: login.")
triggered_gates: []
escalated: false
signals_degraded: false
lock_account: false
notify_user: true
notify_admin: true
breakdown: D=5 S=0 N=23 B=50 C=30 base=108 m_action=1.20 m_org=1.00 a=0 final=89
top_factors:
  - name: login_velocity_critical  component: Behavioral  contribution: 35
  - name: automated_scraper_pattern  component: Correlation  contribution: 30
  - name: datacenter_ip  component: Network  contribution: 15
triggered_rules: ["automated_scraper_pattern", "datacenter_ip", "failed_attempts_high", "headless_ua", "login_velocity_critical", "new_ip_address"]
