risk-engine/tests/snapshots/golden__g_clean_device_list.snap
---
source: tests/golden.rs
expression: "run(\"clean_device_list\", ctx).await"
---
scenario: clean_device_list
decision: Allow
score: 5
base_score: 5
adjusted_score: 5
required_action: None
hold_reason: None
triggered_gates: []
escalated: false
signals_degraded: false
lock_account: false
notify_user: false
notify_admin: false
breakdown: D=5 S=0 N=0 B=0 C=0 base=5 m_action=1.00 m_org=1.00 a=0 final=5
top_factors:
  - name: headless_ua  component: Device  contribution: 5
triggered_rules: ["headless_ua"]
