risk-engine/tests/snapshots/golden__g_credential_cloner.snap
---
source: tests/golden.rs
expression: "run(\"credential_cloner\", ctx).await"
---
scenario: credential_cloner
decision: Hold
score: 83
base_score: 83
adjusted_score: 83
required_action: AdminApproval
hold_reason: Some("Score threshold exceeded. Top signals: sign_count_jump_critical, credential_cloner_pattern. Action: login.")
triggered_gates: []
escalated: false
signals_degraded: false
lock_account: false
notify_user: true
notify_admin: true
breakdown: D=50 S=0 N=0 B=0 C=45 base=95 m_action=1.20 m_org=1.00 a=0 final=83
top_factors:
  - name: sign_count_jump_critical  component: Device  contribution: 50
  - name: credential_cloner_pattern  component: Correlation  contribution: 45
triggered_rules: ["credential_cloner_pattern", "sign_count_jump_critical"]
