risk-engine/tests/snapshots/golden__g_impossible_travel_no_tor.snap
---
source: tests/golden.rs
expression: "run(\"impossible_travel_no_tor\", ctx).await"
---
scenario: impossible_travel_no_tor
decision: Challenge
score: 60
base_score: 60
adjusted_score: 60
required_action: ReLogin
hold_reason: None
triggered_gates: []
escalated: false
signals_degraded: false
lock_account: false
notify_user: true
notify_admin: false
breakdown: D=5 S=0 N=50 B=0 C=0 base=55 m_action=1.20 m_org=1.00 a=0 final=60
top_factors:
  - name: impossible_travel  component: Network  contribution: 40
  - name: country_change  component: Network  contribution: 10
  - name: headless_ua  component: Device  contribution: 5
triggered_rules: ["country_change", "headless_ua", "impossible_travel"]
